# exodbc

./: .gitignore  CMakeLists.txt  Googletest-CMakeLists.txt.in  INSTALL.txt  IndicatorTest.sln  README.md  exOdbc.sln  exOdbc_v120.sln  lgpl.txt  licence.txt  wxOdbc3.sln
branches/exOdbc_cMake/: CMakeLists.txt  CMakeLists.txt.in  INSTALL.txt
exOdbc/: CMakeLists.txt  Version.h.template  exOdbc.rc2  exOdbc.sln  exOdbc.vcxproj  exOdbc.vcxproj.filters  exodbcConfig.h.in
exOdbc/include/: CBufferType.h  ColumnBuffer.h  ColumnBufferFactory.h  ColumnBufferVisitors.h  ColumnFormatter.h  Database.h  DbEnvironment.h  DebugNew.h  EnumFlags.h  Environment.h  Exception.h  ExecutableStatement.h  ExtendedType.h  GenericKey.h  Helpers.h  InfoObject.h  IntegerColumnBuffer.h  LogHandler.h  ObjectName.h  PreparedStatement.h  SpecializedExceptions.h  Sql2BufferMap.h  Sql2BufferTypeMap.h  SqlCBuffer.h  SqlCBufferFactory.h  SqlCBufferVisitors.h  SqlHandle.h  SqlStatementCloser.h  Table.h  TablePrimaryKeys.h  TablePrivileges.h  Visitors.h  exOdbc.h
exOdbc/res/: exOdbc.rc  resource.h
exOdbc/src/: ColumnBuffer.cpp  ColumnBufferFactory.cpp  Database.cpp  DbEnvironment.cpp  Environment.cpp  Exception.cpp  ExecutableStatement.cpp  ExecuteDirectStatement.cpp  GenericCBufferType.h  Helpers.cpp  InfoObject.cpp  LogHandler.cpp  LogManager.cpp  ObjectName.cpp  PreparedStatement.cpp  SpecializedExceptions.cpp  Sql2BufferMap.cpp  Sql2BufferTypeMap.cpp  SqlCBuffer.cpp  SqlServerTypes.h  SqlStatementCloser.cpp  Table.cpp  TablePrimaryKeys.cpp  TablePrivileges.cpp  exOdbc.cpp  exOdbcMain.cpp  stdafx.cpp  stdafx.h  targetver.h
exOdbcGTest/: CMakeLists.txt  CopyBoostDlls.bat  RunTests.ps1  RunTests_DB2.ps1  RunTests_Excel.ps1  RunTests_MySql.ps1  RunTests_SqlServer.ps1  TestParams.txt  TestSettings.xml  Version.h.template  exOdbcGTest.rc2  exOdbcGTest.sln  exOdbcGTest.vcxproj  exOdbcGTest.vcxproj.filters
exOdbcGTest/access/: exodbc.mdb
exOdbcGTest/res/: exOdbcTest.rc
exOdbcGTest/src/: ColumnBufferTest.cpp  DatabaseTest.cpp  DatabaseTest.h  DbTableTest.h  DbTest.cpp  EnumFlagsTest.cpp  EnumFlagsTest.h  EnvironmentTest.cpp  EnvironmentTest.h  ExcelTest.cpp  ExcelTest.h  ExecutableStatementTest.cpp  ExecutableStatementTest.h  ExecuteDirectStatementTest.cpp  GenericTestTables.cpp  GenericTestTables.h  HelpersTest.cpp  HelpersTest.h  IntegerColumnBufferTest.cpp  IntegerColumnBufferTest.h  ManualTestTables.cpp  ManualTestTables.h  PreparedStatementTest.cpp  PreparedStatementTest.h  SqlCBufferTest.cpp  SqlCBufferTest.h  SqlHandleTest.cpp  SqlHandleTest.h  SqlStmtCloserTest.cpp  TableTest.cpp  TableTest.h  TestDbCreator.cpp  TestDbCreator.h  TestParams.cpp  TestParams.h  TestSkipper.h  TestTables.cpp  TestTables.h  VisitorsTest.h  VisitorsTests.cpp  (+7 more)
myLib/: CMakeLists.txt  MyLibConfig.h.in
samples/ListOdbcSources/: CMakeLists.txt  ListOdbcSources.cpp
samples/OdbcConnect/: CMakeLists.txt  OdbcConnect.cpp
samples/ShortIntro/: CMakeLists.txt  ShortIntro.cpp
samples/SqlCPointerBuffer/: CMakeLists.txt  Time2SqlCPointerBuffer.cpp  msodbcsql.h
test/: CMakeLists.txt  ColumnBufferTest.cpp  DatabaseCatalogTest.cpp  DatabaseTest.cpp  DatabaseTest.h  EnvironmentTest.cpp  ExcelTest.cpp  ExcelTest.h  ExecutableStatementTest.cpp  ExecutableStatementTest.h  GetDataWrapperTest.cpp  HelpersTest.cpp  ManualTestTables.cpp  ManualTestTables.h  SetDescriptionFieldWrapperTest.h  SqlHandleTest.cpp  SqlHandleTest.h  SqlInfoPropertyTest.cpp  SqlStmtCloserTest.cpp  SqlStructHelperTest.cpp  TableTest.cpp  TableTest.h  TestDbCreator.cpp  TestDbCreator.h  TestParams.cpp  TestParams.h  TestSettings.xml  UnicodeTest.cpp  Utf8Test.cpp  Utf8Test.h  exOdbcGTest.cpp  exOdbcGTest.h  exOdbcGTestHelpers.cpp  exOdbcGTestHelpers.h  exOdbcTest.cpp  exOdbcTestConfig.h.in  exOdbcTestHelpers.cpp  exOdbcTestHelpers.h  wxCompatibilityTest.cpp  wxCompatibilityTest.h
test/db/access/: exodbc.mdb
trunk/: CMakeLists.txt  Googletest-CMakeLists.txt.in  INSTALL.txt  exOdbc.sln  exOdbc3.sln  wxOdbc3.sln
trunk/Doc/: Doxygen.configuration.template
trunk/exOdbc/: UpdateVersion.ps1  Version.h.template  exOdbc.rc2  exOdbc.sln  exOdbc.vcxproj  exOdbc.vcxproj.filters
trunk/exOdbc3/: exOdbcGTest.vcxproj  wxOdbc3.vcxproj.filters  wxOdbc3GoogleTest.vcxproj.filters
trunk/exOdbcGTest/: RunTests.ps1  RunTests_Access.ps1  RunTests_Excel.ps1  RunTests_MySql.ps1  RunTests_SqlServer.ps1  TestParams.txt  TestSettings.xml  Version.h.template  exOdbcGTest.rc  exOdbcGTest.rc2  exOdbcGTest.sln  exOdbcGTest.vcxproj  exOdbcGTest.vcxproj.filters
trunk/exOdbcSamples/: exOdbcSamples.sln
trunk/src/: AssertionException.cpp  CMakeLists.txt  ColumnBuffer.cpp  ColumnDescription.cpp  ColumnInfo.cpp  Database.cpp  DatabaseCatalog.cpp  Doygen-configuration.in  Environment.cpp  ExecutableStatement.cpp  Helpers.cpp  InfoObject.cpp  LogHandler.cpp  LogManager.cpp  PrimaryKeyInfo.cpp  SetDescriptionFieldWrapper.cpp  SpecialColumnInfo.cpp  SpecializedExceptions.cpp  Sql2StringHelper.cpp  SqlInfo.cpp  SqlInfoProperty.cpp  SqlStatementCloser.cpp  SqlStructHelper.cpp  SqlTypeInfo.cpp  Table.cpp  TableInfo.cpp  exOdbc.cpp
trunk/test/: CMakeLists.txt  ColumnBufferTest.cpp  DatabaseCatalogTest.cpp  DatabaseCatalogTest.h  DatabaseTest.cpp  DebugNew.h  EnvironmentTest.cpp  ExcelTest.cpp  ExecutableStatementTest.cpp  ExecutableStatementTest.h  GetDataWrapperTest.cpp  GetDataWrapperTest.h  HelpersTest.cpp  HelpersTest.h  ManualTestTables.cpp  ManualTestTables.h  SetDescriptionFieldWrapperTest.cpp  SqlHandleTest.cpp  SqlInfoPropertyTest.cpp  SqlInfoPropertyTest.h  SqlStmtCloserTest.cpp  SqlStmtCloserTest.h  SqlStructHelperTest.cpp  SqlStructHelperTest.h  TableTest.cpp  TestDbCreator.h  TestParams.cpp  TestSettings.xml  UnicodeTest.cpp  UnicodeTest.h  Utf8Test.cpp  exOdbcGTest.cpp  exOdbcGTestHelpers.cpp  exOdbcGTestHelpers.h  exOdbcTest.rc  exOdbcTestHelpers.h  wxCompatibilityTest.cpp  wxCompatibilityTest.h
trunk/wxOdbc3/: Version.h.template  wxOdbc3.vcxproj  wxOdbc3.vcxproj.filters  wxOdbc3GoogleTest.vcxproj  wxOdbc3GoogleTest.vcxproj.filters  wxOdbc3Test.vcxproj  wxOdbc3Test.vcxproj.filters
(+1241 files in other folders)
